--- a/popcorn-recipe.html
+++ b/popcorn-recipe.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Inspiration: https://www.simplyrecipes.com/recipes/perfect_popcorn/ -->
+    <!-- Nav bar at top with logo at left, menu options with dropdown, NICE-TO-HAVE: INTERACTIVE: search icon that turns into searchbar when clicked -->
+    <!-- h1 Recipe Title -->
+    <!-- h2 subheading -->
+    <!-- h3 author -->
+    <!-- h4 date -->
+    <!-- NICE TO HAVE: INTERACTIVE: rating -->
+    <!-- HERO IMG WITH CAPTION -->
+    <!-- Intro -->
+    <!-- Nice to have: INTERACTIVE:  "jump to recipe" button -->
+    <!-- Recipe sub section (diff color) with title, cook time, total time, servings, yield -->
+        <!--  Ingredients -->
+        <!-- Instructions
+            large normal font for instruction title, small normal font for details
+            images between instructions
+        -->
+    <!-- Comment section -->
+    <!-- Ad bar -->
+    <!-- NICE TO HAVE: section for cards for other recipes or pages -->
+
+    <h1>hello there</h1>
     
 </body>
+<footer>
+    <!--  footer with logo at top left, contact, social media stuff -->    
+</footer>
 </html>
