add all notes and basic css

--- a/popcorn-recipe/popcorn-recipe.html
+++ b/popcorn-recipe/popcorn-recipe.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+    <title>Tequila Lime Popcorn</title>
 </head>
-<body>
+<div class="container">
     <!-- Inspiration: https://www.simplyrecipes.com/recipes/perfect_popcorn/ -->
-    <!-- Nav bar at top with logo at left, menu options with dropdown, NICE-TO-HAVE: INTERACTIVE: search icon that turns into searchbar when clicked -->
-    <!-- h1 Recipe Title -->
-    <!-- h2 subheading -->
-    <!-- h3 author -->
-    <!-- h4 date -->
-    <!-- NICE TO HAVE: INTERACTIVE: rating -->
-    <!-- HERO IMG WITH CAPTION -->
-    <!-- Intro -->
-    <!-- Nice to have: INTERACTIVE:  "jump to recipe" button -->
+    <header>
+        <!-- Nav bar at top with logo at left, menu options with dropdown, NICE-TO-HAVE: INTERACTIVE: search icon that turns into searchbar when clicked -->
+        <!-- Logo/Web page Title -->
+        <h1>Melissa's Recipe Site</h1>
+    </header>
+    <div id="intro">
+        <!-- h2 Recipe Title -->
+        <h2>Tequila Lime Popcorn</h2>
+        <!-- h3 subheading -->
+        <h3>A savory treat for the snack-loving programmer</h3>
+        <!-- h4 author -->
+        <h4>By Melissa Natividad</h4>
+        <!-- h5 date -->
+        <h5>Posted: July 27, 2022</h5>
+        <!-- NICE TO HAVE: INTERACTIVE: rating -->
+        <!-- HERO IMG WITH CAPTION -->
+        <!-- Intro -->
+        <!-- Nice to have: INTERACTIVE:  "jump to recipe" button -->
+    </div>
     <!-- Recipe sub section (diff color) with title, cook time, total time, servings, yield -->
         <!--  Ingredients -->
         <!-- Instructions
@@ -29,7 +40,7 @@
 
     <h1>hello there</h1>
     
-</body>
+</div>
 <footer>
     <!--  footer with logo at top left, contact, social media stuff -->    
 </footer>
