add basic format with footer header

--- a/popcorn-recipe/popcorn-recipe.html
+++ b/popcorn-recipe/popcorn-recipe.html
@@ -5,43 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Tequila Lime Popcorn</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Grilled Tequila Lime Sweet Potato Wedges</title>
 </head>
-<div class="container">
-    <!-- Inspiration: https://www.simplyrecipes.com/recipes/perfect_popcorn/ -->
+
+<body>
     <header>
         <!-- Nav bar at top with logo at left, menu options with dropdown, NICE-TO-HAVE: INTERACTIVE: search icon that turns into searchbar when clicked -->
         <!-- Logo/Web page Title -->
         <h1>Melissa's Recipe Site</h1>
     </header>
-    <div id="intro">
-        <!-- h2 Recipe Title -->
-        <h2>Tequila Lime Popcorn</h2>
-        <!-- h3 subheading -->
-        <h3>A savory treat for the snack-loving programmer</h3>
-        <!-- h4 author -->
-        <h4>By Melissa Natividad</h4>
-        <!-- h5 date -->
-        <h5>Posted: July 27, 2022</h5>
-        <!-- NICE TO HAVE: INTERACTIVE: rating -->
-        <!-- HERO IMG WITH CAPTION -->
-        <!-- Intro -->
-        <!-- Nice to have: INTERACTIVE:  "jump to recipe" button -->
-    </div>
-    <!-- Recipe sub section (diff color) with title, cook time, total time, servings, yield -->
+        <!-- Inspiration: https://www.simplyrecipes.com/recipes/perfect_popcorn/ -->
+    <div class="wrapper">
+        <div id="intro">
+            <!-- h2 Recipe Title -->
+            <h2>Grilled Tequila Lime Sweet Potato Wedges</h2>
+            <!-- h3 subheading -->
+            <h3>A savory treat for the snack-loving programmer</h3>
+            <!-- h4 author -->
+            <h4>By Melissa Natividad</h4>
+            <!-- h5 date -->
+            <h5>Posted: July 27, 2022</h5>
+            <!-- NICE TO HAVE: INTERACTIVE: rating -->
+            <!-- HERO IMG WITH CAPTION -->
+            <img src = "https://cdn.shopify.com/s/files/1/0200/4672/articles/Kinders_Tequila_Lime_Sweet_Potato_Wedges_Web_1024x1024.jpg?v=1598298514" alt="Cooked sweet potato fries on a serving platter" id="hero-image">
+            <!-- Intro -->
+            <p>The first time I had Kinders Tequila Lime Sweet Potato Fries was in college in my hometown. A lot of school athletes would get sandwiches at this well-known local bbq spot, which I did not care for, until I tried it without any other option. I've gained many-a-pound since then.</p>
+            <!-- Nice to have: INTERACTIVE:  "jump to recipe" button -->
+        </div>
+        <!-- Recipe sub section (diff color) with title, cook time, total time, servings, yield -->
         <!--  Ingredients -->
+        <div id="ingredients">
+            <h2>What You'll Need:</h2>
+            <ul>
+                <li>2-3 small sweet potatoes</li>
+                <li>3 Tablespoons olive or neutral oil</li>
+                <li>2 teaspoons Kinder's Tequila Lime Rub</li>
+            </ul>
+        </div>
         <!-- Instructions
             large normal font for instruction title, small normal font for details
             images between instructions
         -->
-    <!-- Comment section -->
-    <!-- Ad bar -->
-    <!-- NICE TO HAVE: section for cards for other recipes or pages -->
-
-    <h1>hello there</h1>
-    
-</div>
-<footer>
-    <!--  footer with logo at top left, contact, social media stuff -->    
-</footer>
+        <div id="instructions">
+            <h2>Instructions</h2>
+            <ol>
+                <li>Scrub sweet potatoes under running water, dry and cut lengthwise into 8 wedges.</li>
+                <li>Place wedges in a bowl and combine with oil and Kinder's Tequila Lime Rub</li>
+                <li>Preheat grill, if using charcoal grill, set up for direct & indirect cooking.</li>
+                Grill sweet potato wedges on medium low heat, flipping every 5 minutes, for about <li>20 minutes, or until soft.</li>
+                <li>Remove from grill. Serve hot.</li>
+            </ol>
+        </div>
+        <!-- Comment section -->
+        <div id="comments">
+            Comments here
+        </div>
+        <!-- Ad bar -->
+        <!-- NICE TO HAVE: section for cards for other recipes or pages -->        
+        <div id="cards">
+            cards here
+        </div>
+    </div>
+    <footer>
+        <!--  footer with logo at top left, contact, social media stuff -->    
+            Footer here
+    </footer>    
+</body>
 </html>
