recipe page dir

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -12,30 +12,43 @@
 </head>
 
 <body>
-    <div id="intro">
+    <div class="top">
             <h1>Grilled Tequila Lime Sweet Potato Wedges</h1>
             <h3>A savory treat for the snack-loving programmer</h3>
-            <p>The first time I had Kinders Tequila Lime Sweet Potato Fries was in college in my hometown. A lot of school athletes would get sandwiches at this well-known local bbq spot, which I did not care for, until I tried it without any other option. I've gained many-a-pound since then.</p>
-            <img src = "https://cdn.shopify.com/s/files/1/0200/4672/articles/Kinders_Tequila_Lime_Sweet_Potato_Wedges_Web_1024x1024.jpg?v=1598298514" alt="Cooked sweet potato fries on a serving platter" id="hero-image">
     </div>
-
-    <div id="ingredients">
-        <h2>What You'll Need:</h2>
-        <ul>
-            <li>2-3 small sweet potatoes</li>
-            <li>3 Tablespoons olive or neutral oil</li>
-            <li>2 teaspoons Kinder's Tequila Lime Rub</li>
-        </ul>
+    <div class="left">
+        <div>
+            <p class="description">The first time I had Kinders Tequila Lime Sweet Potato Fries was in college in my hometown. A lot of school athletes would get sandwiches at this well-known local bbq spot, which I did not care for, until I tried it without any other option. I've gained many-a-pound since then.</p>
+            <img src = "https://cdn.shopify.com/s/files/1/0200/4672/articles/Kinders_Tequila_Lime_Sweet_Potato_Wedges_Web_1024x1024.jpg?v=1598298514" alt="Cooked sweet potato fries on a serving platter">
+            <p>Photo credit: <a href= "https://kinders.com/blogs/recipes_and_tips/grilled-tequila-lime-sweet-potato-wedges">Kinders</a></p>
+        </div>
+        <div>
+            <h2>What You'll Need:</h2>
+            <ul>
+                <li>2-3 small sweet potatoes</li>
+                <li>3 Tablespoons olive or neutral oil</li>
+                <li>2 teaspoons Kinder's Tequila Lime Rub</li>
+            </ul>
+        </div>
     </div>
-    <div id="instructions">
-        <h2>Instructions</h2>
-        <ol>
-            <li>Scrub sweet potatoes under running water, dry and cut lengthwise into 8 wedges.</li>
-            <li>Place wedges in a bowl and combine with oil and Kinder's Tequila Lime Rub</li>
-            <li>Preheat grill, if using charcoal grill, set up for direct & indirect cooking.</li>
-            Grill sweet potato wedges on medium low heat, flipping every 5 minutes, for about <li>20 minutes, or until soft.</li>
-            <li>Remove from grill. Serve hot.</li>
-        </ol>
+    <div class="right">
+        <div>
+            <h2>Instructions</h2>
+            <ol>
+                <li>Scrub sweet potatoes under running water, dry and cut lengthwise into 8 wedges.</li>
+                <li>Place wedges in a bowl and combine with oil and Kinder's Tequila Lime Rub</li>
+                <li>Preheat grill, if using charcoal grill, set up for direct & indirect cooking.</li>
+                Grill sweet potato wedges on medium low heat, flipping every 5 minutes, for about <li>20 minutes, or until soft.</li>
+                <li>Remove from grill. Serve hot.</li>
+            </ol>
+        </div>
+        <div>
+            <h2>Similar Recipes:</h2>
+            <a href="https://www.erinliveswhole.com/crispy-baked-chili-lime-sweet-potato-fries/">Crispy Baked Chili Lime Sweet Potato Fries</a>
+            <br><a href="https://greateightfriends.com/air-fryer-chili-lime-sweet-potato-fries/">AIR FRYER CHILI LIME SWEET POTATO FRIES</a>
+            <br><a href="https://paleoglutenfree.com/recipes/extra-crispy-garlic-lime-sweet-potato-fries/">EXTRA CRISPY GARLIC LIME SWEET POTATO FRIES</a>
+            </p>
+        </div>
     </div>
 </body>
 </html>
