add some styling

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -12,17 +12,22 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="top">
+    <header>
+
+    </header>
+    <div class="container row">
+        <div class="titleSection">
             <h1>Grilled Tequila Lime Sweet Potato Wedges</h1>
             <h3>A savory treat for the snack-loving programmer</h3>
         </div>
-        <div class="left">
-            <div>
-                <p class="description">The first time I had Kinders Tequila Lime Sweet Potato Fries was in college in my hometown. A lot of school athletes would get sandwiches at this well-known local bbq spot, which I did not care for, until I tried it without any other option. I've gained many-a-pound since then.</p>
+        <div class="description">
+            <div class="intro">
+                <p>The first time I had Kinders Tequila Lime Sweet Potato Fries was in college in my hometown. A lot of school athletes would get sandwiches at this well-known local bbq spot, which I did not care for, until I tried it without any other option. I've gained many-a-pound since then.</p>
                 <img src = "https://cdn.shopify.com/s/files/1/0200/4672/articles/Kinders_Tequila_Lime_Sweet_Potato_Wedges_Web_1024x1024.jpg?v=1598298514" alt="Cooked sweet potato fries on a serving platter">
                 <p>Photo credit: <a href= "https://kinders.com/blogs/recipes_and_tips/grilled-tequila-lime-sweet-potato-wedges">Kinders</a></p>
             </div>
+        </div>
+        <div class="prepInstructions">
             <div>
                 <h2>What You'll Need:</h2>
                 <ul>
@@ -31,8 +36,6 @@
                     <li>2 teaspoons Kinder's Tequila Lime Rub</li>
                 </ul>
             </div>
-        </div>
-        <div class="right">
             <div id="prepInfo">
                 <!-- Prep Time: 10 minutes
                 Cook Time: 20 minutes
@@ -52,7 +55,7 @@
                     <li>Remove from grill. Serve hot.</li>
                 </ol>
             </div>
-            <div>
+            <div class="recipesCards">
                 <h2>Similar Recipes:</h2>
                 <a href="https://www.erinliveswhole.com/crispy-baked-chili-lime-sweet-potato-fries/">Crispy Baked Chili Lime Sweet Potato Fries</a>
                 <br><a href="https://greateightfriends.com/air-fryer-chili-lime-sweet-potato-fries/">AIR FRYER CHILI LIME SWEET POTATO FRIES</a>
@@ -61,6 +64,7 @@
             </div>
         </div>
     </div>
+    <footer></footer>
     <script src="script.js"></script>
 </body>
 </html>
