--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -7,13 +7,39 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Ibarra+Real+Nova:ital,wght@0,500;0,700;1,400&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Grilled Tequila Lime Sweet Potato Wedges</title>
 </head>
 
 <body>
     <header>
-
+        <!-- Hamburger nav -->
+        <!-- <label id="hamburger-menu">
+            <nav id="sidebar-menu">
+              <h3>Menu</h3>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </label>
+          
+          <div class="overlay"></div> -->
+        <!-- Flat nav -->
+        <ul class="navBar" id="mainMenu">
+            <li><a href="#home">home</a></li>
+            <li><a href="#products">products</a></li>
+            <li><a href="#recipes">recipes</a></li>
+            <li><img src="./umami-mami-4.svg" alt="logo" id="logo"></img></li>
+            <li><a href="#where-to-buy">where to buy</a></li>
+            <li><a href="#faq">faq</a> </li>
+            <li><a href="#about">about</a></li>
+        </ul>
     </header>
     <div class="container row">
         <div class="titleSection">
