change logofooter id

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -99,7 +99,7 @@
         </div>
     </div>
     <footer>
-        <img src="./umami-mami-4.svg" alt="logo" id="logoImg"></img>
+        <img src="./umami-mami-4.svg" alt="logo" id="logoFooter"></img>
     </footer>
     <script src="script.js"></script>
 </body>
