add footer info

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -99,7 +99,22 @@
         </div>
     </div>
     <footer>
-        <img src="./umami-mami-4.svg" alt="logo" id="logoFooter"></img>
+        <div class="footerDiv">
+            <div class="logoFtrDiv">
+                <img src="./umami-mami-4.svg" alt="logo" id="logoFooter"></img>
+            </div>
+            <div class="footerDescription">
+                <p>This mock recipe site was made as a project for Techtonica. Made with love from Oakland, CA by Melissa Natividad.</p>
+            </div>
+            <div class="socialMedia">
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                </ul>
+            </div>
+        </div>
+        
     </footer>
     <script src="script.js"></script>
 </body>
