add social media icons

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -108,9 +108,15 @@
             </div>
             <div class="socialMedia">
                 <ul>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
-                    <li>Instagram</li>
+                    <li>
+                        <a href="#"><img src="./fb-logo.png" class="socialMediaIcons"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./twitter-logo.svg" class="socialMediaIcons"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./ig-logo.png" class="socialMediaIcons"></a>
+                    </li>
                 </ul>
             </div>
         </div>
