WIP add jump to recipe button

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -53,6 +53,11 @@
         <div class="titleSection">
             <h1>Grilled Tequila Lime Sweet Potato Wedges</h1>
             <h3>A savory treat for the snack-loving programmer</h3>
+            <button class="jumpBtn">
+                Jump to Recipe
+                <br>
+                <img id="arrow" src="./down.png">
+            </button>
         </div>
         <div class="description">
             <div class="intro">
