add routesexpress server

--- a/projects/routesexpress/client/index.html
+++ b/projects/routesexpress/client/index.html
@@ -9,5 +9,7 @@
 <body>
   <h1>hiyeee</h1>
   <button onClick="location.href='/about'">About</button>
+  <a href="http://localhost:8080/contact">Contact</a>
+  <a href="http://localhost:8080/portfolio">Portfolio</a>
 </body>
 </html>
